# llvm-ir-dataset-utils

./: .gitignore  .gitmodules  .readthedocs.yaml  Dockerfile  Pipfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/workflows/: docs.yml  package_publish.yml  poetry_build.yml
.packaging/: Dockerfile  README.md
corpus_descriptions/: Zomato.json  azure-sdk-for-rust.json  chromium.json  cpuinfo.json  cpython.json  ffmpeg.json  firefox.json  linux.json  llvm.json  syn.json  tree.json  zlib.json
corpus_descriptions_test/: cargo_fall_back_to_tar.json  cargo_tar_archive.json  cargo_timeout.json  fallback.json  julia_gen.json  julia_zomato.json  manual_tree.json  portage_boost.json  portage_hello.json  spack_tree.json  spack_zlib.json  spack_zlib_cray.json  swift_swift_blocks.json  tar_archive.json
docs/: building-corpora.md  building_corpora.rst  conf.py  index.rst  package.json
llvm_ir_dataset_utils/builders/: autoconf_builder.py  builder.py  cargo_builder.py  cmake_builder.py  julia_builder.jl  julia_builder.py  manual_builder.py  portage_builder.py  self_contained_builder.py  spack_builder.py  swift_builder.py
llvm_ir_dataset_utils/sources/: git_source.py  source.py  tar_source.py
llvm_ir_dataset_utils/tools/: aggregate_build_sizes.py  audit_licenses.py  build_crate_from_repository.py  build_julia_packages.py  build_self_contained_sources.py  build_spack_package_from_list.py  build_swift_packages.py  collect_license_information.py  collect_textual_ir.py  corpus_from_description.py  count_tokens.py  delete_folder.py  export_deduplicated_corpus.py  gather_self_contained_sources.py  get_bbs.py  get_build_failure_logs.py  get_common_constants.py  get_julia_packages.py  get_spack_package_list.py  get_swift_packages.py  grep_source.py  link_files.py  module_statistics.py  opt_analysis_tools.py  outlier_analysis.py  parse_crates_database.py  process_to_parquet.py  spack_analyze_failures.py  sum_build_sizes.py  test_parsing.py  upload_dataset_hf.py  validate_parquet_db.py
llvm_ir_dataset_utils/tools/RemoveFunctionBodyPass/: CMakeLists.txt  RemoveFunctionBody.cpp  install
llvm_ir_dataset_utils/util/: bitcode_module.py  corpus.py  dataset_corpus.py  extract_source_lib.py  licenses.py  pass_list_constants.py  portage.py  spack.py
test/zig/: Makefile  hello.zig
utils/: compiler_wrapper++  compiler_wrapper.py
(+6 files in other folders)
