[tool.poetry]
name = "llvm-ir-dataset-utils"
description = "Infrastructure to build LLVM IR-based Datasets."
readme = "README.md"
authors = [
    "Aiden Grossman <aidengrossmanpso@gmail.com>",
    "Ludger Paehler <ludger.paehler@tum.de>"
]
version = "0.2"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
]
include = [
    { path = "llvm_ir_dataset_utils" },
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
ml-compiler-opt = "^0.0.1.dev202401270006"
absl-py = "^2.1.0"
ray = "^2.20.0"
toml = "^0.10.2"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
pytest = "^8.2.0"
ruff = "^0.4.3"

[tool.yapf]
based_on_style = "yapf"
indent_width = 2

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401", "E731"]

[tool.codespell]
ignore-words-list = "crate,"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
